[project]
name = "tiny-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jaxtyping>=0.3.9",
  "psutil>=7.2.2",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "torchvision>=0.25.0",
  "transformers>=5.2.0",
]

[dependency-groups]
dev = ["beartype>=0.22.9", "pytest>=9.0.2"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=model,beartype.beartype"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["jaxtyping"]
